--- a/TeamBuddy.DAL/TeamBuddy.DAL.csproj
+++ b/TeamBuddy.DAL/TeamBuddy.DAL.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
 </Project>
