[BL] Models created

--- a/TeamBuddy.BL/TeamBuddy.BL.csproj
+++ b/TeamBuddy.BL/TeamBuddy.BL.csproj
@@ -8,4 +8,13 @@
     <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mapper\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TeamBuddy.DAL\TeamBuddy.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
