TeamBuddy open page - changed Title from text to picture format

--- a/TeamBuddy.App/TeamBuddy.App.csproj
+++ b/TeamBuddy.App/TeamBuddy.App.csproj
@@ -151,5 +151,11 @@
       <Name>TeamBuddy.DAL</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Images\TBTitle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Images\TBTitle2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
