--- a/TeamBuddy.App/packages.config
+++ b/TeamBuddy.App/packages.config
@@ -19,6 +19,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.0.1" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="2.6.1" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
