--- a/TeamBuddy.App/TeamBuddy.App.csproj
+++ b/TeamBuddy.App/TeamBuddy.App.csproj
@@ -293,6 +293,9 @@
     <Resource Include="Views\Images\TeamBuddyIcon.ico" />
     <Resource Include="Views\Images\TeamBuddy_logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Images\TBBG.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.4.2.1\build\Fody.targets" Condition="Exists('..\packages\Fody.4.2.1\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
