--- a/TeamBuddy.App/packages.config
+++ b/TeamBuddy.App/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dragablz" version="0.0.3.203" targetFramework="net461" />
   <package id="Fody" version="4.2.1" targetFramework="net461" developmentDependency="true" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.5.1" targetFramework="net461" />
