--- a/TeamBuddy.App/TeamBuddy.App.csproj
+++ b/TeamBuddy.App/TeamBuddy.App.csproj
@@ -167,6 +167,7 @@
     <Compile Include="ViewModels\HomeUserDetailViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\LogInViewModel.cs" />
+    <Compile Include="ViewModels\SelectedTeamCreateCommentViewModel.cs" />
     <Compile Include="ViewModels\SelectedTeamCreatePostViewModel.cs" />
     <Compile Include="ViewModels\SelectedTeamDetailViewModel.cs" />
     <Compile Include="ViewModels\SelectedTeamLeftBarViewModel.cs" />
@@ -190,6 +191,9 @@
     </Compile>
     <Compile Include="Views\HomeView.xaml.cs">
       <DependentUpon>HomeView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SelectedTeamCreateCommentView.xaml.cs">
+      <DependentUpon>SelectedTeamCreateCommentView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\SelectedTeamCreatePostView.xaml.cs">
       <DependentUpon>SelectedTeamCreatePostView.xaml</DependentUpon>
@@ -219,6 +223,10 @@
       <DependentUpon>TeamSelectedView.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\HomeCreateTeamView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SelectedTeamCreateCommentView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
